--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <title>Fitness Gym</title>
+    <title>Fitnessgym</title>
   </head>
   <body>
     <noscript>
